// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`template > renders active 1`] = `"<li><a class=\\"dropdown-item active\\" href=\\"#\\">there</a></li>"`;

exports[`template > renders default 1`] = `"<li><a class=\\"dropdown-item\\" href=\\"https://github.com/owowagency/bootstrap-vue\\"></a></li>"`;

exports[`template > renders default 2`] = `
"<li>
  <div class=\\"dropdown-item\\" href=\\"#\\"></div>
</li>"
`;

exports[`template > renders default 3`] = `
"<li>
  <routerlink class=\\"dropdown-item\\" href=\\"#\\" to=\\"[object Object]\\"></routerlink>
</li>"
`;

exports[`template > renders disabled 1`] = `"<li><a class=\\"dropdown-item disabled\\" href=\\"#\\">there</a></li>"`;

exports[`template > renders divider 1`] = `
"<li>
  <hr class=\\"dropdown-divider\\">
</li>"
`;

exports[`template > renders header 1`] = `
"<li>
  <h6 class=\\"dropdown-header\\">
    <!-- @slot Displays content inside the dropdown menu item. -->general kenobi
  </h6>
</li>"
`;

exports[`template > renders label 1`] = `"<li><a class=\\"dropdown-item\\" href=\\"#\\">Hello</a></li>"`;
